Fix jump at end of the fade in of the homepage component
Joe

--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -5,7 +5,7 @@
 
 .fade-appear.fade-appear-active {
   opacity: 1;
-  transition: opacity 1500ms linear;
+  transition: opacity 1000ms linear;
 }
 
 .fade-enter {
